// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEditor tests Should render a list of many items in a scrollable HTML div 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    className="ListEditor-scrollable-list"
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
    style={
      Object {
        "height": 250,
        "overflowX": "hidden",
        "overflowY": "scroll",
        "width": "100%",
      }
    }
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="one"
      itemTemplate={[Function]}
      key="one-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="two"
      itemTemplate={[Function]}
      key="two-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={2}
      item="three"
      itemTemplate={[Function]}
      key="three-2"
      listRowId="test-list-editor-list-row-2"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={3}
      item="four"
      itemTemplate={[Function]}
      key="four-3"
      listRowId="test-list-editor-list-row-3"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={4}
      item="five"
      itemTemplate={[Function]}
      key="five-4"
      listRowId="test-list-editor-list-row-4"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={5}
      item="six"
      itemTemplate={[Function]}
      key="six-5"
      listRowId="test-list-editor-list-row-5"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={6}
      item="seven"
      itemTemplate={[Function]}
      key="seven-6"
      listRowId="test-list-editor-list-row-6"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={7}
      item="eight"
      itemTemplate={[Function]}
      key="eight-7"
      listRowId="test-list-editor-list-row-7"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={8}
      item="nine"
      itemTemplate={[Function]}
      key="nine-8"
      listRowId="test-list-editor-list-row-8"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={9}
      item="ten"
      itemTemplate={[Function]}
      key="ten-9"
      listRowId="test-list-editor-list-row-9"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests Should render a list of many items inline 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="one"
      itemTemplate={[Function]}
      key="one-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="two"
      itemTemplate={[Function]}
      key="two-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={2}
      item="three"
      itemTemplate={[Function]}
      key="three-2"
      listRowId="test-list-editor-list-row-2"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={3}
      item="four"
      itemTemplate={[Function]}
      key="four-3"
      listRowId="test-list-editor-list-row-3"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={4}
      item="five"
      itemTemplate={[Function]}
      key="five-4"
      listRowId="test-list-editor-list-row-4"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={5}
      item="six"
      itemTemplate={[Function]}
      key="six-5"
      listRowId="test-list-editor-list-row-5"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={6}
      item="seven"
      itemTemplate={[Function]}
      key="seven-6"
      listRowId="test-list-editor-list-row-6"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={7}
      item="eight"
      itemTemplate={[Function]}
      key="eight-7"
      listRowId="test-list-editor-list-row-7"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={8}
      item="nine"
      itemTemplate={[Function]}
      key="nine-8"
      listRowId="test-list-editor-list-row-8"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={9}
      item="ten"
      itemTemplate={[Function]}
      key="ten-9"
      listRowId="test-list-editor-list-row-9"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests Should render a list of many items inline 2`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="one"
      itemTemplate={[Function]}
      key="one-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="two"
      itemTemplate={[Function]}
      key="two-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={2}
      item="three"
      itemTemplate={[Function]}
      key="three-2"
      listRowId="test-list-editor-list-row-2"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={3}
      item="four"
      itemTemplate={[Function]}
      key="four-3"
      listRowId="test-list-editor-list-row-3"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={4}
      item="five"
      itemTemplate={[Function]}
      key="five-4"
      listRowId="test-list-editor-list-row-4"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={5}
      item="six"
      itemTemplate={[Function]}
      key="six-5"
      listRowId="test-list-editor-list-row-5"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={6}
      item="seven"
      itemTemplate={[Function]}
      key="seven-6"
      listRowId="test-list-editor-list-row-6"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={7}
      item="eight"
      itemTemplate={[Function]}
      key="eight-7"
      listRowId="test-list-editor-list-row-7"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={8}
      item="nine"
      itemTemplate={[Function]}
      key="nine-8"
      listRowId="test-list-editor-list-row-8"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={9}
      item="ten"
      itemTemplate={[Function]}
      key="ten-9"
      listRowId="test-list-editor-list-row-9"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should add an object item and set state 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  />
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should add an object item and set state 2`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={true}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item={
        Object {
          "id": "test",
          "value": "test",
        }
      }
      itemTemplate={[Function]}
      key="test"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should add item and set state 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  />
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should add item and set state 2`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={true}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item={
        Object {
          "key": "test",
          "value": "test",
        }
      }
      itemTemplate={[Function]}
      key="test"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should call default input normaliser function 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <formComponent
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  />
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should move down an item 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="one"
      itemTemplate={[Function]}
      key="one-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="three"
      itemTemplate={[Function]}
      key="three-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={2}
      item="two"
      itemTemplate={[Function]}
      key="two-2"
      listRowId="test-list-editor-list-row-2"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should move up an item 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="two"
      itemTemplate={[Function]}
      key="two-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="one"
      itemTemplate={[Function]}
      key="one-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={2}
      item="three"
      itemTemplate={[Function]}
      key="three-2"
      listRowId="test-list-editor-list-row-2"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should process incomplete props without error 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  />
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should render full component as disabled 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={true}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  />
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should render full component with a defined className 1`] = `
<div
  className="requiredField"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  />
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should render input value as itemList 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="test 1"
      itemTemplate={[Function]}
      key="test 1-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="test 2"
      itemTemplate={[Function]}
      key="test 2-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should render input value as itemList for List 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="test 1"
      itemTemplate={[Function]}
      key="test 1-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="test 2"
      itemTemplate={[Function]}
      key="test 2-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should update an issn with selected index 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item={
        Object {
          "key": "1234-1234",
          "value": Object {
            "ulrichs": Object {},
          },
        }
      }
      itemTemplate={[Function]}
      key="1234-1234"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item={
        Object {
          "key": "1234-2222",
          "value": Object {
            "ulrichs": Object {},
          },
        }
      }
      itemTemplate={[Function]}
      key="1234-2222"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;

exports[`ListEditor tests should update an item with selected index 1`] = `
<div
  className="testClass"
  id="test-list-editor-list-editor"
>
  <mockConstructor
    disabled={false}
    inputField={[MockFunction]}
    isValid={[MockFunction]}
    itemIndexSelectedToEdit={null}
    itemSelectedToEdit={null}
    key="list-editor-form"
    listEditorId="test-list-editor"
    locale={
      Object {
        "inputFieldLabel": "NoLabel",
      }
    }
    normalize={[Function]}
    onAdd={[Function]}
    required={false}
  />
  <Memo(ListRowHeader)
    disabled={false}
    hideReorder={false}
    listEditorId="test-list-editor"
    onDeleteAll={[Function]}
  />
  <div
    data-testid="test-list-editor-list"
    id="test-list-editor-list"
  >
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={false}
      disabled={false}
      hideReorder={false}
      index={0}
      item="one"
      itemTemplate={[Function]}
      key="one-0"
      listRowId="test-list-editor-list-row-0"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={true}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={1}
      item="four"
      itemTemplate={[Function]}
      key="four-1"
      listRowId="test-list-editor-list-row-1"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
    <Memo(ListRow)
      canEdit={false}
      canMoveDown={false}
      canMoveUp={true}
      disabled={false}
      hideReorder={false}
      index={2}
      item="three"
      itemTemplate={[Function]}
      key="three-2"
      listRowId="test-list-editor-list-row-2"
      onDelete={[Function]}
      onEdit={[Function]}
      onMoveDown={[Function]}
      onMoveUp={[Function]}
    />
  </div>
  <ForwardRef(FormHelperText) />
</div>
`;
